2010-01-25  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_pf.cpp (PolicyCompiler_pf::insertCarpRule):
	fixes #1152 CARP and pfsync rules should match "in" and "out".
	Automatically added rules for CARP and pfsync for the PF firewall
	should match in both directions, rather than just "out".

	* NATCompiler_ipt.cpp (AssignInterface::processNext): fixes #1150
	"fwb_ipt should check AddressRange in TSrc against addresses of
	interfaces". Compiler for iptables finds interface that matches
	AddressRange object used in Translated Source of a NAT rule and
	uses it for the "-o intf" clause. Addresses of interface can match
	the range excactly or partially. Exact match is when range
	boundaries match the beginning and the end of the subnet defined
	by the interface address and netmask. Partial match is when one of
	the range boundaries belongs to the subnet but another one does
	not. In this case compiler uses inetrface but issues a warning. If
	interface has multiple ip addresses, all of them are taken into
	consideration and interface is used if at least one matches. If
	address range in TSrc is wide and matches subnets of several
	interfaces, compiler splits the rule and uses all of them but does
	not replace the range with narrower one and still issues a
	warning.

	* ProjectPanel.cpp (ProjectPanel::getDestDir): fixes #1149:
	ProjectPanel::getDestDir should use userDataDir dir on all OS

2010-01-24  yalovoy <yalovoy@gmail.com>

	* #1127 GUI crash when clicking in undo panel
	1) new firewall (set name, Next, Next, Finish)
	2) add interface
	3) open Policy rule set view
	4) insert rule
	5) drag interface to the "Interface" rule element of the rule
	6) click on <empty> in the undo panel
	6) click on the last entry in the undo panel
	Affected files: RuleSetModel.cpp

	* #1132 Keyboard shortcuts for moving rules with "move up", "move down"
	Affected files: src/gui/RuleSetView.cpp, src/gui/RuleSetView.h
